--- a/day1assignment/src/assets/main.css
+++ b/day1assignment/src/assets/main.css
@@ -1,1 +1,11 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+*{
+    font-family: 'Poppins', sans-serif;
+}
+a{
+    text-decoration: none;
+    border: 1px solid grey;
+    color: black;
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+}
